--- a/abnreports.html
+++ b/abnreports.html
@@ -351,7 +351,7 @@
     apiKey: "AIzaSyA0YUIpIDh4WB4p1ewiNB0XfwHve0ByljU",
     authDomain: "abnreport-fd733.firebaseapp.com",
     projectId: "abnreport-fd733",
-    storageBucket: "abnreport-fd733.appspot.com",
+    storageBucket: "abnreport-fd733.firebasestorage.app",
     messagingSenderId: "349748947315",
     appId: "1:349748947315:web:010cb671d2a95bcf1f7d06"
   };
