--- a/abnreports.html
+++ b/abnreports.html
@@ -219,21 +219,30 @@
   .btn-delete{background:#dc3545;color:#fff}
   .btn-delete:hover{background:#c82333}
   
-  /* 停止時間バッジ */
+/* 停止時間バッジ */
+.stop-badge{
+  position:absolute;
+  right:200px;
+  top:16px;
+  padding:6px 12px;
+  border-radius:14px;
+  font-weight:700;
+  font-size:.9rem;
+  color:#fff;
+  background:#1976d2;
+  box-shadow:0 2px 6px rgba(0,0,0,.15);
+}
+.stop-badge.warn{background:#f57c00;}
+.stop-badge.danger{background:#d32f2f;}
+
+/* レスポンシブ時のバッジ位置調整 */
+@media (max-width:900px){
   .stop-badge{
-    position:absolute;
     right:16px;
-    top:16px;
-    padding:6px 12px;
-    border-radius:14px;
-    font-weight:700;
-    font-size:.9rem;
-    color:#fff;
-    background:#1976d2;
-    box-shadow:0 2px 6px rgba(0,0,0,.15);
+    top:auto;
+    bottom:16px;
   }
-  .stop-badge.warn{background:#f57c00;}
-  .stop-badge.danger{background:#d32f2f;}
+}
   
   /* テーブルビュー */
   .table-view{overflow-x:auto;display:none}
