--- a/abnreports.html
+++ b/abnreports.html
@@ -222,8 +222,8 @@
 /* 停止時間バッジ */
 .stop-badge{
   position:absolute;
-  right:200px;
-  top:16px;
+  right:16px;
+  bottom:16px;
   padding:6px 12px;
   border-radius:14px;
   font-weight:700;
