--- a/abnreports.html
+++ b/abnreports.html
@@ -431,7 +431,7 @@
             </div>
           </div>
           <div class="form-group word-suggestions">
-            <label>製造処置内容 *</label>
+            <label>対応内容 *</label>
             <textarea id="actionTaken" required></textarea>
             <div id="actionWordSuggestions" class="word-suggestion-box">
               <div class="word-suggestion-header">💡 よく使われる表現（クリックで追加）</div>
@@ -683,8 +683,8 @@
         <details style="background:#f8f9ff;border:1px solid #e5e7eb;border-radius:8px;padding:10px;">
           <summary style="cursor:pointer;font-weight:bold;color:#667eea;">対応ヘッダ（エクスポートと同じ）</summary>
           <div style="font-size:.9rem;color:#333;margin-top:8px;line-height:1.6;">
-            必須: 整理No, 部署, 発生日, 異常内容, 製造処置内容<br>
-            任意: ライン名, 発生時刻, 再開時刻, 遡り, 処置者, 技術要請, 技術処置者, 発見タイミング, 前回終物確認, 命数有無, 命数到達, 保全単位, 原因対策, 再発新規, 肯定, 状態, _id, 停止時間(分)
+            必須: 整理No, 部署, 発生日, 異常内容, 対応内容<br>
+            任意: ライン名, 発生時刻, 再開時刻, 遡り, 処置者, 技術要請, 技術処置者, 発見タイミング, 前回終物確認, 命数有無, 命数到達, 保全単位, 技術対応, 再発新規, 肯定, 状態, _id, 停止時間(分)
           </div>
         </details>
 
@@ -928,13 +928,13 @@ const db = getFirestore(app);
 
   const HEADER_MAP = {
     '整理No':'serialNo','部署':'department','ライン名':'lineName','発生日':'occurrenceDate',
-    '発生時刻':'occurrenceTime','再開時刻':'restartTime','異常内容':'anomalyContent','製造処置内容':'actionTaken',
+    '発生時刻':'occurrenceTime','再開時刻':'restartTime','異常内容':'anomalyContent','対応内容':'actionTaken',
     '遡り':'traceback','処置者':'handler','技術要請':'techRequest','技術処置者':'techHandler',
     '発見タイミング':'discoveryTiming','前回終物確認':'previousCheck','命数有無':'lifespan','命数到達':'lifespanReached',
-    '保全単位':'maintenanceUnit','原因対策':'rootCauseAction','再発新規':'recurrenceType','肯定':'affirmation',
+    '保全単位':'maintenanceUnit','技術対応':'rootCauseAction','再発新規':'recurrenceType','肯定':'affirmation',
     '状態':'_statusText','停止時間(分)':'_stopMin','_id':'_id'
   };
-  const REQUIRED_HEADERS = ['整理No','部署','発生日','異常内容','製造処置内容'];
+  const REQUIRED_HEADERS = ['整理No','部署','発生日','異常内容','対応内容'];
 
   let importParsed = null;
 
@@ -1022,7 +1022,7 @@ const db = getFirestore(app);
     const sample = mappedRows.slice(0, previewCount).map(o => ({
       整理No:o.serialNo, 部署:o.department, 発生日:o.occurrenceDate,
       異常内容:(o.anomalyContent||'').slice(0,20)+(o.anomalyContent?.length>20?'...':''),
-      製造処置内容:(o.actionTaken||'').slice(0,20)+(o.actionTaken?.length>20?'...':''), _id:o._id||''
+      対応内容:(o.actionTaken||'').slice(0,20)+(o.actionTaken?.length>20?'...':''), _id:o._id||''
     }));
 
     const previewEl = document.getElementById('importPreview');
@@ -1038,7 +1038,7 @@ const db = getFirestore(app);
             <th style="background:#667eea;color:#fff;padding:6px;">部署</th>
             <th style="background:#667eea;color:#fff;padding:6px;">発生日</th>
             <th style="background:#667eea;color:#fff;padding:6px;">異常内容</th>
-            <th style="background:#667eea;color:#fff;padding:6px;">製造処置内容</th>
+            <th style="background:#667eea;color:#fff;padding:6px;">対応内容</th>
             <th style="background:#667eea;color:#fff;padding:6px;">_id</th>
           </tr></thead>
           <tbody>
@@ -1048,7 +1048,7 @@ const db = getFirestore(app);
                 <td style="border-bottom:1px solid #eee;padding:6px;">${r.部署}</td>
                 <td style="border-bottom:1px solid #eee;padding:6px;">${r.発生日}</td>
                 <td style="border-bottom:1px solid #eee;padding:6px;">${r.異常内容}</td>
-                <td style="border-bottom:1px solid #eee;padding:6px;">${r.製造処置内容}</td>
+                <td style="border-bottom:1px solid #eee;padding:6px;">${r.対応内容}</td>
                 <td style="border-bottom:1px solid #eee;padding:6px;">${r._id}</td>
               </tr>
             `).join('')}
@@ -1325,7 +1325,7 @@ ${problems.length?'\n一部エラー:\n'+problems.join('\n'):''}`);
           </div>
           <div class="similar-case-content">
             <strong>異常内容:</strong> ${item.anomalyContent || '-'}<br>
-            <strong>製造処置:</strong> ${item.actionTaken || '-'}
+            <strong>対応内容:</strong> ${item.actionTaken || '-'}
           </div>
           <div class="similar-case-tech">
             <strong>🔧 技術対応内容:</strong><br>
@@ -1497,7 +1497,7 @@ ${problems.length?'\n一部エラー:\n'+problems.join('\n'):''}`);
               <div class="card-content-text">${item.anomalyContent||'-'}</div>
             </div>
             <div class="card-content-section">
-              <div class="card-content-label">🔧 製造処置</div>
+              <div class="card-content-label">🔧 対応内容</div>
               <div class="card-content-text">${item.actionTaken||'-'}</div>
             </div>
             ${item.status==='complete' && item.techRequest==='要請' ? `
@@ -1506,7 +1506,7 @@ ${problems.length?'\n一部エラー:\n'+problems.join('\n'):''}`);
                 ${item.maintenanceUnit ? `<div class="tech-info-item"><span class="tech-info-label">保全単位:</span><span class="tech-info-value">${item.maintenanceUnit}</span></div>` : ''}
                 ${item.recurrenceType ? `<div class="tech-info-item"><span class="tech-info-label">分類:</span><span class="tech-info-value">${item.recurrenceType}</span></div>` : ''}
                 ${item.lifespan ? `<div class="tech-info-item"><span class="tech-info-label">命数:</span><span class="tech-info-value">${item.lifespan}</span></div>` : ''}
-                ${item.rootCauseAction ? `<div class="tech-info-item" style="grid-column:1/-1;"><span class="tech-info-label">原因対策:</span><span class="tech-info-value">${item.rootCauseAction}</span></div>` : ''}
+                ${item.rootCauseAction ? `<div class="tech-info-item" style="grid-column:1/-1;"><span class="tech-info-label">技術対応:</span><span class="tech-info-value">${item.rootCauseAction}</span></div>` : ''}
               </div>
             ` : ''}
           </div>
@@ -1555,7 +1555,7 @@ ${problems.length?'\n一部エラー:\n'+problems.join('\n'):''}`);
             <th>整理No</th><th>部署</th><th>ライン</th><th>発生日</th><th>発生時刻</th>
             <th>再開時刻</th><th>停止時間(分)</th><th>異常内容</th><th>処置内容</th><th>遡り</th>
             <th>処置者</th><th>技術要請</th><th>技術処置者</th><th>発見タイミング</th><th>前回終物確認</th>
-            <th>命数有無</th><th>命数到達</th><th>保全単位</th><th>原因対策</th><th>再発新規</th>
+            <th>命数有無</th><th>命数到達</th><th>保全単位</th><th>技術対応</th><th>再発新規</th>
             <th>肯定</th><th>写真</th><th>状態</th><th>操作</th>
           </tr></thead>
           <tbody>
@@ -1711,7 +1711,7 @@ ${problems.length?'\n一部エラー:\n'+problems.join('\n'):''}`);
         ${d.department?`<div><strong>部署:</strong> ${d.department}</div>`:''}
         ${d.lineName?`<div><strong>ライン名:</strong> ${d.lineName}</div>`:''}
         <div><strong>異常内容:</strong> ${d.anomalyContent||''}</div>
-        <div><strong>製造処置:</strong> ${d.actionTaken||''}</div>
+        <div><strong>対応内容:</strong> ${d.actionTaken||''}</div>
         <div><strong>発生日:</strong> ${d.occurrenceDate||''}</div>
         <div><strong>処置者:</strong> ${d.handler||''}</div>
       </div>
@@ -1852,7 +1852,7 @@ ${problems.length?'\n一部エラー:\n'+problems.join('\n'):''}`);
         <div class="form-group"><label>処置者 *</label><select id="edit_handler"></select></div>
         <div class="form-group"><label>整理No *</label><input type="text" id="edit_serialNo"></div>
         <div class="form-group"><label>異常内容 *</label><textarea id="edit_anomalyContent"></textarea></div>
-        <div class="form-group"><label>製造処置内容 *</label><textarea id="edit_actionTaken"></textarea></div>
+        <div class="form-group"><label>対応内容 *</label><textarea id="edit_actionTaken"></textarea></div>
         <div class="form-group"><label>遡り *</label><select id="edit_traceback"><option value="">選択</option><option value="有">有</option><option value="無">無</option></select></div>
         <div class="form-group"><label>技術要請 *</label><select id="edit_techRequest"><option value="">選択</option><option value="要請">技術要請あり</option><option value="完結">製造で完結</option></select></div>
       </div>
@@ -2086,7 +2086,7 @@ ${problems.length?'\n一部エラー:\n'+problems.join('\n'):''}`);
         <h4 style="color:#f57c00;margin-bottom:15px;">🔧 製造部門の対応</h4>
         <div style="display:grid;gap:12px;">
           <div><strong>異常内容:</strong><div style="background:#fff;padding:12px;border-radius:6px;margin-top:8px;white-space:pre-wrap;">${item.anomalyContent || '-'}</div></div>
-          <div><strong>製造処置内容:</strong><div style="background:#fff;padding:12px;border-radius:6px;margin-top:8px;white-space:pre-wrap;">${item.actionTaken || '-'}</div></div>
+          <div><strong>対応内容:</strong><div style="background:#fff;padding:12px;border-radius:6px;margin-top:8px;white-space:pre-wrap;">${item.actionTaken || '-'}</div></div>
           <div><strong>遡り:</strong> ${item.traceback || '-'}</div>
           <div><strong>技術要請:</strong> ${item.techRequest === '要請' ? '技術要請あり' : '製造で完結'}</div>
         </div>
@@ -2150,7 +2150,7 @@ ${problems.length?'\n一部エラー:\n'+problems.join('\n'):''}`);
   /* CSV出力 */
   document.getElementById('btnExport').addEventListener('click', ()=>{
     if (!anomalyCache.length){ alert('エクスポートするデータがありません'); return; }
-    const headers = ['整理No','部署','ライン名','発生日','発生時刻','再開時刻','停止時間(分)','異常内容','製造処置内容','遡り','処置者','技術要請','技術処置者','発見タイミング','前回終物確認','命数有無','命数到達','保全単位','原因対策','再発新規','肯定','状態','_id'];
+    const headers = ['整理No','部署','ライン名','発生日','発生時刻','再開時刻','停止時間(分)','異常内容','対応内容','遡り','処置者','技術要請','技術処置者','発見タイミング','前回終物確認','命数有無','命数到達','保全単位','技術対応','再発新規','肯定','状態','_id'];
     const rows = anomalyCache.map(item=>{
       const stopMin = (()=>{
         if (!item.occurrenceTime || !item.restartTime) return null;
