--- a/abnreports.html
+++ b/abnreports.html
@@ -412,7 +412,7 @@
           <h3 style="color:#8e24aa;margin-bottom:12px;font-size:1.05rem;">🔢 整理No</h3>
           <div class="form-group word-suggestions">
             <label>整理No *</label>
-            <input type="text" id="serialNo" required placeholder="例: 2024-001" list="serialNoList">
+            <input type="text" id="serialNo" required placeholder="例:6769" list="serialNoList">
             <datalist id="serialNoList"></datalist>
             <div id="serialNoInfo" style="margin-top:8px;padding:8px;background:#f3e5f5;border-radius:4px;font-size:.85rem;color:#8e24aa;display:none;">
               <strong>💡 ヒント:</strong> この整理Noの過去データ: <span id="serialNoCount">0</span>件
