--- a/abnreports.html
+++ b/abnreports.html
@@ -524,7 +524,7 @@
         <div class="form-group"><label>何が悪くどうした</label><textarea id="rootCauseAction"></textarea></div>
         <div class="form-group"><label>再発か新規か *</label><select id="recurrenceType"><option value="">選択</option><option value="再発">再発</option><option value="新規">新規</option></select></div>
         <div class="form-group">
-          <label>肯定 *</label>
+          <label>暫定 *</label>
           <select id="affirmation" required>
             <option value="">選択</option>
             <option value="有">有</option>
@@ -684,7 +684,7 @@
           <summary style="cursor:pointer;font-weight:bold;color:#667eea;">対応ヘッダ（エクスポートと同じ）</summary>
           <div style="font-size:.9rem;color:#333;margin-top:8px;line-height:1.6;">
             必須: 整理No, 部署, 発生日, 異常内容, 対応内容<br>
-            任意: ライン名, 発生時刻, 再開時刻, 遡り, 処置者, 技術要請, 技術処置者, 発見タイミング, 前回終物確認, 命数有無, 命数到達, 保全単位, 技術対応, 再発新規, 肯定, 状態, _id, 停止時間(分)
+            任意: ライン名, 発生時刻, 再開時刻, 遡り, 処置者, 技術要請, 技術処置者, 発見タイミング, 前回終物確認, 命数有無, 命数到達, 保全単位, 技術対応, 再発新規, 暫定, 状態, _id, 停止時間(分)
           </div>
         </details>
 
@@ -931,7 +931,7 @@ const db = getFirestore(app);
     '発生時刻':'occurrenceTime','再開時刻':'restartTime','異常内容':'anomalyContent','対応内容':'actionTaken',
     '遡り':'traceback','処置者':'handler','技術要請':'techRequest','技術処置者':'techHandler',
     '発見タイミング':'discoveryTiming','前回終物確認':'previousCheck','命数有無':'lifespan','命数到達':'lifespanReached',
-    '保全単位':'maintenanceUnit','技術対応':'rootCauseAction','再発新規':'recurrenceType','肯定':'affirmation',
+    '保全単位':'maintenanceUnit','技術対応':'rootCauseAction','再発新規':'recurrenceType','暫定':'affirmation',
     '状態':'_statusText','停止時間(分)':'_stopMin','_id':'_id'
   };
   const REQUIRED_HEADERS = ['整理No','部署','発生日','異常内容','対応内容'];
@@ -1556,7 +1556,7 @@ ${problems.length?'\n一部エラー:\n'+problems.join('\n'):''}`);
             <th>再開時刻</th><th>停止時間(分)</th><th>異常内容</th><th>処置内容</th><th>遡り</th>
             <th>処置者</th><th>技術要請</th><th>技術処置者</th><th>発見タイミング</th><th>前回終物確認</th>
             <th>命数有無</th><th>命数到達</th><th>保全単位</th><th>技術対応</th><th>再発新規</th>
-            <th>肯定</th><th>写真</th><th>状態</th><th>操作</th>
+            <th>暫定</th><th>写真</th><th>状態</th><th>操作</th>
           </tr></thead>
           <tbody>
             ${items.map(it=>{
@@ -1887,7 +1887,7 @@ ${problems.length?'\n一部エラー:\n'+problems.join('\n'):''}`);
         <div class="form-group"><label>保全単位</label><input type="text" id="edit_maintenanceUnit"></div>
         <div class="form-group"><label>何が悪くどうした</label><textarea id="edit_rootCauseAction"></textarea></div>
         <div class="form-group"><label>再発か新規か</label><select id="edit_recurrenceType"><option value="">選択</option><option value="再発">再発</option><option value="新規">新規</option></select></div>
-        <div class="form-group"><label>肯定</label>
+        <div class="form-group"><label>暫定</label>
           <select id="edit_affirmation">
             <option value="">選択</option>
             <option value="有">有</option>
@@ -2103,7 +2103,7 @@ ${problems.length?'\n一部エラー:\n'+problems.join('\n'):''}`);
             <div><strong>保全単位:</strong> ${item.maintenanceUnit || '-'}</div>
             <div><strong>原因・対策:</strong><div style="background:#fff;padding:12px;border-radius:6px;margin-top:8px;white-space:pre-wrap;">${item.rootCauseAction || '-'}</div></div>
             <div><strong>再発/新規:</strong> ${item.recurrenceType || '-'}</div>
-            <div><strong>肯定:</strong> ${item.affirmation || '-'}</div>
+            <div><strong>暫定:</strong> ${item.affirmation || '-'}</div>
           </div>
         </div>` : ''}
       ${(item.mfgPhotoUrls?.length || item.techPhotoUrls?.length) ? `
@@ -2150,7 +2150,7 @@ ${problems.length?'\n一部エラー:\n'+problems.join('\n'):''}`);
   /* CSV出力 */
   document.getElementById('btnExport').addEventListener('click', ()=>{
     if (!anomalyCache.length){ alert('エクスポートするデータがありません'); return; }
-    const headers = ['整理No','部署','ライン名','発生日','発生時刻','再開時刻','停止時間(分)','異常内容','対応内容','遡り','処置者','技術要請','技術処置者','発見タイミング','前回終物確認','命数有無','命数到達','保全単位','技術対応','再発新規','肯定','状態','_id'];
+    const headers = ['整理No','部署','ライン名','発生日','発生時刻','再開時刻','停止時間(分)','異常内容','対応内容','遡り','処置者','技術要請','技術処置者','発見タイミング','前回終物確認','命数有無','命数到達','保全単位','技術対応','再発新規','暫定','状態','_id'];
     const rows = anomalyCache.map(item=>{
       const stopMin = (()=>{
         if (!item.occurrenceTime || !item.restartTime) return null;
