--- a/abnreports.html
+++ b/abnreports.html
@@ -1975,70 +1975,70 @@ ${problems.length?'\n一部エラー:\n'+problems.slice(0,10).join('\n'):''}`);
     });
   });
 
-  /* 編集モーダル */
-  const editModalHtml = `
-    <div class="modal-content">
-      <div class="modal-title">✏️ 履歴レコード編集</div>
-      <div class="edit-tabs">
-        <button class="edit-tab active" data-edit-tab="mfg">製造</button>
-        <button class="edit-tab" data-edit-tab="tech">技術</button>
+/* 編集モーダル */
+const editModalHtml = `
+  <div class="modal-content">
+    <div class="modal-title">✏️ 履歴レコード編集</div>
+    <div class="edit-tabs">
+      <button class="edit-tab active" data-edit-tab="mfg">製造</button>
+      <button class="edit-tab" data-edit-tab="tech">技術</button>
+    </div>
+    <div id="editMfg" class="edit-pane">
+      <div class="form-group"><label>発生日 *</label><input type="date" id="edit_occurrenceDate"></div>
+      <div class="form-group"><label>発生時刻 / 再開時刻</label><div class="time-group"><input type="time" id="edit_occurrenceTime"><input type="time" id="edit_restartTime"></div></div>
+      <div class="form-group"><label>部署 *</label><select id="edit_department"></select></div>
+      <div class="form-group"><label>ライン名 *</label><select id="edit_lineName"></select></div>
+      <div class="form-group"><label>処置者 *</label><select id="edit_handler"></select></div>
+      <div class="form-group"><label>整理No *</label><input type="text" id="edit_serialNo"></div>
+      <div class="form-group"><label>異常内容 *</label><textarea id="edit_anomalyContent"></textarea></div>
+      <div class="form-group"><label>対応内容 *</label><textarea id="edit_actionTaken"></textarea></div>
+      <div class="form-group"><label>遡り *</label><input type="text" id="edit_traceback" placeholder="例: 有、無、一部 など"></div>
+      <div class="form-group"><label>技術要請 *</label><select id="edit_techRequest"><option value="">選択</option><option value="要請">技術要請あり</option><option value="完結">製造で完結</option></select></div>
+    </div>
+    <div id="editTech" class="edit-pane" style="display:none;">
+      <div class="form-group"><label>技術処置者</label><input type="text" id="edit_techHandler"></div>
+      <div class="form-group"><label>発見タイミング</label>
+        <select id="edit_discoveryTiming">
+          <option value="">選択</option>
+          <option value="運転中">運転中</option>
+          <option value="頭出し">頭出し</option>
+          <option value="初物">初物</option>
+          <option value="終物">終物</option>
+          <option value="その他">その他</option>
+        </select>
       </div>
-      <div id="editMfg" class="edit-pane">
-        <div class="form-group"><label>発生日 *</label><input type="date" id="edit_occurrenceDate"></div>
-        <div class="form-group"><label>発生時刻 / 再開時刻</label><div class="time-group"><input type="time" id="edit_occurrenceTime"><input type="time" id="edit_restartTime"></div></div>
-        <div class="form-group"><label>部署 *</label><select id="edit_department"></select></div>
-        <div class="form-group"><label>ライン名 *</label><select id="edit_lineName"></select></div>
-        <div class="form-group"><label>処置者 *</label><select id="edit_handler"></select></div>
-        <div class="form-group"><label>整理No *</label><input type="text" id="edit_serialNo"></div>
-        <div class="form-group"><label>異常内容 *</label><textarea id="edit_anomalyContent"></textarea></div>
-        <div class="form-group"><label>対応内容 *</label><textarea id="edit_actionTaken"></textarea></div>
-        <div class="form-group"><label>遡り *</label><select id="edit_traceback"><option value="">選択</option><option value="有">有</option><option value="無">無</option></select></div>
-        <div class="form-group"><label>技術要請 *</label><select id="edit_techRequest"><option value="">選択</option><option value="要請">技術要請あり</option><option value="完結">製造で完結</option></select></div>
+      <div class="form-group"><label>前回終物確認</label>
+        <select id="edit_previousCheck">
+          <option value="">選択</option>
+          <option value="不要">不要</option>
+          <option value="未">未</option>
+          <option value="確認済">確認済</option>
+        </select>
       </div>
-      <div id="editTech" class="edit-pane" style="display:none;">
-        <div class="form-group"><label>技術処置者</label><input type="text" id="edit_techHandler"></div>
-        <div class="form-group"><label>発見タイミング</label>
-          <select id="edit_discoveryTiming">
-            <option value="">選択</option>
-            <option value="運転中">運転中</option>
-            <option value="頭出し">頭出し</option>
-            <option value="初物">初物</option>
-            <option value="終物">終物</option>
-            <option value="その他">その他</option>
-          </select>
-        </div>
-        <div class="form-group"><label>前回終物確認</label>
-          <select id="edit_previousCheck">
-            <option value="">選択</option>
-            <option value="不要">不要</option>
-            <option value="未">未</option>
-            <option value="確認済">確認済</option>
-          </select>
-        </div>
-        <div class="form-group"><label>命数有無</label><select id="edit_lifespan"><option value="">選択</option><option value="有">有</option><option value="無">無</option></select></div>
-        <div class="form-group"><label>命数到達</label>
-          <select id="edit_lifespanReached">
-            <option value="">選択</option>
-            <option value="至">至</option>
-            <option value="不達">不達</option>
-          </select>
-        </div>
-        <div class="form-group"><label>保全単位</label><input type="text" id="edit_maintenanceUnit"></div>
-        <div class="form-group"><label>何が悪くどうした</label><textarea id="edit_rootCauseAction"></textarea></div>
-        <div class="form-group"><label>再発か新規か</label><select id="edit_recurrenceType"><option value="">選択</option><option value="再発">再発</option><option value="新規">新規</option></select></div>
-        <div class="form-group"><label>暫定</label>
-          <select id="edit_affirmation">
-            <option value="">選択</option>
-            <option value="有">有</option>
-            <option value="無">無</option>
-          </select>
-        </div>
+      <div class="form-group"><label>命数有無</label><select id="edit_lifespan"><option value="">選択</option><option value="有">有</option><option value="無">無</option></select></div>
+      <div class="form-group"><label>命数到達</label>
+        <select id="edit_lifespanReached">
+          <option value="">選択</option>
+          <option value="至">至</option>
+          <option value="不達">不達</option>
+        </select>
       </div>
-      <div class="modal-actions">
-        <button class="btn btn-cancel" id="btnEditCancel" style="flex:1;">キャンセル</button>
-        <button class="btn btn-primary" id="btnEditSave" style="flex:1;">保存</button>
+      <div class="form-group"><label>保全単位</label><input type="text" id="edit_maintenanceUnit"></div>
+      <div class="form-group"><label>何が悪くどうした</label><textarea id="edit_rootCauseAction"></textarea></div>
+      <div class="form-group"><label>再発か新規か</label><select id="edit_recurrenceType"><option value="">選択</option><option value="再発">再発</option><option value="新規">新規</option></select></div>
+      <div class="form-group"><label>暫定</label>
+        <select id="edit_affirmation">
+          <option value="">選択</option>
+          <option value="有">有</option>
+          <option value="無">無</option>
+        </select>
       </div>
-    </div>`;
+    </div>
+    <div class="modal-actions">
+      <button class="btn btn-cancel" id="btnEditCancel" style="flex:1;">キャンセル</button>
+      <button class="btn btn-primary" id="btnEditSave" style="flex:1;">保存</button>
+    </div>
+  </div>`;
   const modal = document.createElement('div'); modal.className='modal'; modal.id='editModal'; modal.innerHTML=editModalHtml; document.body.appendChild(modal);
 
   let editCurrentId=null, editMastersCache=null;
