--- a/abnreports.html
+++ b/abnreports.html
@@ -441,9 +441,9 @@
 <div class="form-group"><label>遡り *</label>
   <input type="text" id="traceback" required placeholder="例: 300個廃却　品質判断より生産分流動 など">
 </div>
-          <div class="form-group"><label>技術要請 *</label>
+          <div class="form-group"><label>技術対応 *</label>
             <select id="techRequest" required>
-              <option value="">選択</option><option value="要請">技術要請あり</option><option value="完結">製造で完結</option>
+              <option value="">選択</option><option value="要請">技術対応あり</option><option value="完結">完了</option>
             </select>
           </div>
 
@@ -684,7 +684,7 @@
           <summary style="cursor:pointer;font-weight:bold;color:#667eea;">対応ヘッダ（エクスポートと同じ）</summary>
           <div style="font-size:.9rem;color:#333;margin-top:8px;line-height:1.6;">
             必須: 整理No, 部署, 発生日, 異常内容, 対応内容<br>
-            任意: ライン名, 発生時刻, 再開時刻, 遡り, 処置者, 技術要請, 技術処置者, 発見タイミング, 前回終物確認, 命数有無, 命数到達, 保全単位, 技術対応, 再発新規, 暫定, 状態, _id, 停止時間(分)
+            任意: ライン名, 発生時刻, 再開時刻, 遡り, 処置者, 技術対応, 技術処置者, 発見タイミング, 前回終物確認, 命数有無, 命数到達, 保全単位, 技術対応, 再発新規, 暫定, 状態, _id, 停止時間(分)
           </div>
         </details>
 
@@ -1046,7 +1046,7 @@
   const HEADER_MAP = {
     '整理No':'serialNo','部署':'department','ライン名':'lineName','発生日':'occurrenceDate',
     '発生時刻':'occurrenceTime','再開時刻':'restartTime','異常内容':'anomalyContent','対応内容':'actionTaken',
-    '遡り':'traceback','処置者':'handler','技術要請':'techRequest','技術処置者':'techHandler',
+    '遡り':'traceback','処置者':'handler','技術対応':'techRequest','技術処置者':'techHandler',
     '発見タイミング':'discoveryTiming','前回終物確認':'previousCheck','命数有無':'lifespan','命数到達':'lifespanReached',
     '保全単位':'maintenanceUnit','技術対応':'rootCauseAction','再発新規':'recurrenceType','暫定':'affirmation',
     '状態':'_statusText','停止時間(分)':'_stopMin','_id':'_id'
@@ -1694,7 +1694,7 @@ ${problems.length?'\n一部エラー:\n'+problems.slice(0,10).join('\n'):''}`);
           <thead><tr>
             <th>整理No</th><th>部署</th><th>ライン</th><th>発生日</th><th>発生時刻</th>
             <th>再開時刻</th><th>停止時間(分)</th><th>異常内容</th><th>処置内容</th><th>遡り</th>
-            <th>処置者</th><th>技術要請</th><th>技術処置者</th><th>発見タイミング</th><th>前回終物確認</th>
+            <th>処置者</th><th>技術対応</th><th>技術処置者</th><th>発見タイミング</th><th>前回終物確認</th>
             <th>命数有無</th><th>命数到達</th><th>保全単位</th><th>技術対応</th><th>再発新規</th>
             <th>暫定</th><th>写真</th><th>状態</th><th>操作</th>
           </tr></thead>
@@ -1717,7 +1717,7 @@ ${problems.length?'\n一部エラー:\n'+problems.slice(0,10).join('\n'):''}`);
                   <td style="min-width:150px;">${(it.actionTaken||'-').slice(0,50)}${(it.actionTaken||'').length>50?'...':''}</td>
                   <td>${it.traceback||'-'}</td>
                   <td>${it.handler||'-'}</td>
-                  <td>${it.techRequest==='要請'?'技術要請':it.techRequest==='完結'?'製造完結':'-'}</td>
+                  <td>${it.techRequest==='要請'?'技術対応':it.techRequest==='完結'?'製造完結':'-'}</td>
                   <td>${it.techHandler||'-'}</td>
                   <td>${it.discoveryTiming||'-'}</td>
                   <td>${it.previousCheck||'-'}</td>
@@ -2006,7 +2006,7 @@ const editModalHtml = `
       <div class="form-group"><label>異常内容 *</label><textarea id="edit_anomalyContent"></textarea></div>
       <div class="form-group"><label>対応内容 *</label><textarea id="edit_actionTaken"></textarea></div>
       <div class="form-group"><label>遡り *</label><input type="text" id="edit_traceback" placeholder="例: 有、無、一部 など"></div>
-      <div class="form-group"><label>技術要請 *</label><select id="edit_techRequest"><option value="">選択</option><option value="要請">技術要請あり</option><option value="完結">製造で完結</option></select></div>
+      <div class="form-group"><label>技術対応 *</label><select id="edit_techRequest"><option value="">選択</option><option value="要請">技術対応あり</option><option value="完結">完了</option></select></div>
     </div>
     <div id="editTech" class="edit-pane" style="display:none;">
       <div class="form-group"><label>技術処置者</label><input type="text" id="edit_techHandler"></div>
@@ -2237,7 +2237,7 @@ const editModalHtml = `
           <div><strong>異常内容:</strong><div style="background:#fff;padding:12px;border-radius:6px;margin-top:8px;white-space:pre-wrap;">${item.anomalyContent || '-'}</div></div>
           <div><strong>対応内容:</strong><div style="background:#fff;padding:12px;border-radius:6px;margin-top:8px;white-space:pre-wrap;">${item.actionTaken || '-'}</div></div>
           <div><strong>遡り:</strong> ${item.traceback || '-'}</div>
-          <div><strong>技術要請:</strong> ${item.techRequest === '要請' ? '技術要請あり' : '製造で完結'}</div>
+          <div><strong>技術対応:</strong> ${item.techRequest === '要請' ? '技術対応あり' : '完了'}</div>
         </div>
       </div>
       ${item.status === 'complete' && item.techRequest === '要請' ? `
@@ -2300,14 +2300,14 @@ const editModalHtml = `
   /* CSV出力 */
   document.getElementById('btnExport').addEventListener('click', ()=>{
     if (!anomalyCache.length){ alert('エクスポートするデータがありません'); return; }
-    const headers = ['整理No','部署','ライン名','発生日','発生時刻','再開時刻','停止時間(分)','異常内容','対応内容','遡り','処置者','技術要請','技術処置者','発見タイミング','前回終物確認','命数有無','命数到達','保全単位','技術対応','再発新規','暫定','状態','_id'];
+    const headers = ['整理No','部署','ライン名','発生日','発生時刻','再開時刻','停止時間(分)','異常内容','対応内容','遡り','処置者','技術対応','技術処置者','発見タイミング','前回終物確認','命数有無','命数到達','保全単位','技術対応','再発新規','暫定','状態','_id'];
     const rows = anomalyCache.map(item=>{
       const stopMin = calcStopMinutes(item);
       return [
         item.serialNo||'',item.department||'',item.lineName||'',item.occurrenceDate||'',item.occurrenceTime||'',item.restartTime||'',
         (stopMin!==null?stopMin:''),
         item.anomalyContent||'',item.actionTaken||'',item.traceback||'',item.handler||'',
-        item.techRequest==='要請'?'技術要請あり':item.techRequest==='完結'?'製造で完結':'',
+        item.techRequest==='要請'?'技術対応あり':item.techRequest==='完結'?'完了':'',
         item.techHandler||'',item.discoveryTiming||'',item.previousCheck||'',item.lifespan||'',item.lifespanReached||'',
         item.maintenanceUnit||'',item.rootCauseAction||'',item.recurrenceType||'',item.affirmation||'',
         item.status==='complete'?'完了':'技術入力待ち', item._id
