--- a/gyomu_nippo.html
+++ b/gyomu_nippo.html
@@ -1453,63 +1453,6 @@
         .save-indicator.error {
             background: #dc3545;
         }
-        /* タイムライン左上固定のズームコントロール */
-        .zoom-controls-fixed {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            z-index: 1000;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            background: rgba(255, 255, 255, 0.95);
-            padding: 8px 12px;
-            border-radius: 8px;
-            border: 2px solid #667eea;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-        }
-
-        .zoom-controls-fixed label {
-            font-size: 12px;
-            font-weight: 600;
-            color: #495057;
-            margin: 0;
-        }
-
-        .zoom-controls-fixed button {
-            padding: 4px 10px;
-            border: 2px solid #667eea;
-            background: white;
-            color: #667eea;
-            border-radius: 4px;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s;
-            font-size: 12px;
-            min-width: 28px;
-        }
-
-        .zoom-controls-fixed button:hover {
-            background: #667eea;
-            color: white;
-        }
-
-        .zoom-controls-fixed .zoom-level {
-            font-size: 13px;
-            font-weight: 700;
-            color: #667eea;
-            min-width: 45px;
-            text-align: center;
-        }
-
-        /* タイムラインコンテナに相対位置を設定 */
-        .timeline-container {
-            position: relative;
-            overflow-x: auto;
-            border: 2px solid #e9ecef;
-            border-radius: 5px;
-            background: white;
-        }
     </style>
 </head>
 <body>
@@ -1601,7 +1544,13 @@
                     <button class="btn btn-delete-recurring" onclick="showDeleteRecurringModal()">🗑️ 定期解除</button>
                     <button id="manualSaveBtn" class="btn btn-success" onclick="manualSave()" title="タイムラインの変更を保存">💾 保存</button>
                 </div>
-
+                <div class="zoom-controls">
+                    <label>🔍 表示スケール:</label>
+                    <button onclick="zoomOut()">−</button>
+                    <span class="zoom-level" id="zoomLevel">100%</span>
+                    <button onclick="zoomIn()">＋</button>
+                    <button onclick="resetZoom()" style="margin-left: 10px;">リセット</button>
+                </div>
             </div>
             <div id="deadlineWarnings" style="margin-top: 15px;"></div>
 
@@ -1614,15 +1563,8 @@
                 <button class="btn btn-primary" onclick="showAddTaskModal('actual')" style="padding: 12px 30px; font-size: 16px; margin: 0 5px; background: #764ba2;">✅ 実績追加</button>
             </div>
 
-     <div class="timeline-container">
-                <!-- 左上固定のズームコントロール -->
-                <div class="zoom-controls-fixed">
-                    <label>🔍</label>
-                    <button onclick="zoomOut()">−</button>
-                    <span class="zoom-level" id="zoomLevel">100%</span>
-                    <button onclick="zoomIn()">＋</button>
-                    <button onclick="resetZoom()">◎</button>
-                </div>
+            <div class="timeline-container">
+                <div class="timeline">
                     <div class="time-labels">
                         <div class="time-labels-spacer"></div>
                         <div class="time-labels-content">
@@ -2119,7 +2061,7 @@
         let zoomScale = 1.0; // ズームスケール (0.5 = 50%, 1.0 = 100%, 2.0 = 200%)
         const MIN_ZOOM = 0.5;
         const MAX_ZOOM = 3.0;
-        const ZOOM_STEP = 0.25; // 50%刻み
+        const ZOOM_STEP = 0.5; // 50%刻み
 
         // 初期化
         initializeApp();
