--- a/gyomu_nippo.html
+++ b/gyomu_nippo.html
@@ -605,6 +605,10 @@
             background: #f8f9fa;
             border-radius: 5px;
             height: 120px;
+                position: sticky;
+    left: 0;
+    z-index: 100;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
         }
 
         .person-label-name {
