--- a/gyomu_nippo.html
+++ b/gyomu_nippo.html
@@ -605,10 +605,10 @@
             background: #f8f9fa;
             border-radius: 5px;
             height: 120px;
-                position: sticky;
-    left: 0;
-    z-index: 100;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+            position: sticky;
+            left: 0;
+            z-index: 500;  /* 100 → 500 に変更 */
+            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
         }
 
         .person-label-name {
@@ -728,7 +728,7 @@
             border-right: none;
         }
 
-        .task-bar {
+.task-bar {
             position: absolute;
             height: 35px;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
@@ -745,6 +745,7 @@
             user-select: none;
             transition: box-shadow 0.2s;
             overflow: visible;
+            z-index: 10;  /* この行を追加 */
         }
 
         .bar-buttons {
@@ -776,7 +777,7 @@
             padding-left: 10px;
         }
 
-        /* 30分以下のタスクは外部にタスク名表示 */
+/* 30分以下のタスクは外部にタスク名表示 */
         .task-bar.short-task .task-bar-text {
             position: absolute;
             left: 0;
@@ -788,7 +789,7 @@
             font-size: 11px;
             white-space: nowrap;
             box-shadow: 0 2px 8px rgba(0,0,0,0.3);
-            z-index: 1000;
+            z-index: 50;  /* 1000 → 50 に変更（担当者名より下） */
             overflow: visible;
             text-overflow: clip;
         }
@@ -805,6 +806,7 @@
         }
 
         /* ホバー時の詳細表示（通常サイズのタスクのみ） */
+
         .task-bar:not(.short-task):hover .task-bar-text::after {
             content: attr(data-full-text);
             position: absolute;
@@ -816,7 +818,7 @@
             border-radius: 6px;
             font-size: 12px;
             white-space: nowrap;
-            z-index: 2000;
+            z-index: 600;  /* 2000 → 600 に変更（担当者名より上だがモーダルより下） */
             box-shadow: 0 4px 12px rgba(0,0,0,0.3);
             pointer-events: none;
         }
@@ -833,11 +835,10 @@
             z-index: 2001;
             pointer-events: none;
         }
-
-        /* ホバー時のバー全体の強調 */
+/* ホバー時のバー全体の強調 */
         .task-bar:hover {
             box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-            z-index: 2000;
+            z-index: 100;  /* 2000 → 100 に変更（担当者名より下） */
         }
 
         .task-bar:hover .task-bar-text {
@@ -893,11 +894,10 @@
             box-shadow: 0 4px 10px rgba(0,0,0,0.3);
         }
 
-        .task-bar.dragging {
+.task-bar.dragging {
             opacity: 0.7;
-            z-index: 1000;
+            z-index: 400;  /* 1000 → 400 に変更（担当者名より下） */
         }
-
         .bar-buttons {
             display: flex;
             gap: 2px;
